--- a/src/index.html
+++ b/src/index.html
@@ -17,3 +17,14 @@
   <app-root>Loading...</app-root>
 </body>
 </html>
+<!--
+  Next - add form and submit button"Update" to each shot card
+  add fields for hole, club
+  maybe have overall submit button
+  data dirty type flag
+
+  Then work on open layers type view
+  Back end save
+  Course object
+  Round , weather details
+-->
