--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,9 @@
   maybe have overall submit button
   data dirty type flag
 
-  Then work on open layers type view - add component for map
+  Add interaction to move shot-> modifyend handler as class method
+  Number shots by hole / get text bigger and offset from point
+  Right click to spread points/get move top only working
   Back end save
   Course object
   Round , weather details
