onts and move shots'

--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,10 @@
   maybe have overall submit button
   data dirty type flag
 
-  Add interaction to move shot-> modifyend handler as class method
   Number shots by hole / get text bigger and offset from point
   Right click to spread points/get move top only working
+  Manual enter distance for last of hole
+  Icon for hole/flag
   Back end save
   Course object
   Round , weather details
