display shot number of hole

--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,15 @@
 <!--
   Next - add form and submit button"Update" to each shot card
   add fields for hole, club, putt- if putt display feet and let manual enter of dist
-  When set hole for a shot - if changing then previous shot needs dist set to 0
+  
   maybe have overall submit button
   data dirty type flag
 
-  Number shots by hole / get text bigger and offset from point
-  Right click to spread points/get move top only working
+  
+  Tools or map edit? eg spread, flags, club set
+  Right click to spread points/get move top only working/ or nudge from shot list
+  Either a new hole display/list component or group on shotlist (tree maybe?)
+  Insert shot before/after
   Manual enter distance for last of hole
   Icon for hole/flag
   Back end save
