--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   <script src="https://use.fontawesome.com/439de06f03.js"></script>
   <script src="https://openlayers.org/en/v4.4.1/build/ol.js"></script>
+  <script src="https://unpkg.com/ol3-contextmenu/build/ol3-contextmenu.js"></script>
 </head>
 <body>
   <app-root>Loading...</app-root>
