Menu appears in correct place

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,13 @@
 </body>
 </html>
 <!--
-  Next - add form and submit button"Update" to each shot card
+  Next - 
+    Context menu on map - spread (enable if zoom > ?), delete, Surface ( Tee, fairway,rough, sand, green (fringe?))
+                  - insert before, after, insert drop/with without penalty
+    Shot edit "window" show clicked in map or selected in list
+    Work on text hole display i.e. GIR, Fairway, Putts, Scramble
+
+    Colour code markers per hole? or symbols for putting etc, flag
   add fields for hole, club, putt- if putt display feet and let manual enter of dist
   
   maybe have overall submit button
