ng prime for shot list

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 </html>
 <!--
   Next - 
-    Context menu on map - spread (enable if zoom > ?), delete, Surface ( Tee, fairway,rough, sand, green (fringe?))
+    Context menu on map - set tee/hole, delete, Surface ( Tee, fairway,rough, sand, green (fringe?))
                   - insert before, after, insert drop/with without penalty
     Shot edit "window" show clicked in map or selected in list
     Work on text hole display i.e. GIR, Fairway, Putts, Scramble
