--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,14 @@
 </html>
 <!--
   Next - 
-    Debug set hole as 1 on first shot - numbering goes wrong
+    Pipe to format distance ; yrds / feet
+    Update Round add flags to a flag layer for each last shot on hole and round
     Context menu on map - edit (dialog set all about shot) set tee/hole,  Surface ( Tee, fairway,rough, sand, green (fringe?))
                   - insert before, after, insert drop/with without penalty
     Shot edit "window" show clicked in map or selected in list
     Work on text hole display i.e. GIR, Fairway, Putts, Scramble
     Debug move/ set hole - seems to undo move of shots on map. Spread not right after move of multiple
-    Pipe to format distance ; yrds / feet
+    
 
     Colour code markers per hole? or symbols for putting etc, flag
   add fields for hole, club, putt- if putt display feet and let manual enter of dist
