map single click

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,9 @@
 </html>
 <!--
   Next - 
-    Pipe to format distance ; yrds / feet
+    Shot edit component - fire event from singleclick- display shot selected in new component or select in shot list
+    Vector layers for flags , tees?
+    Pipe to format distance ; yrds / feet ? How would it work for input?
     Update Round add flags to a flag layer for each last shot on hole and round
     Context menu on map - edit (dialog set all about shot) set tee/hole,  Surface ( Tee, fairway,rough, sand, green (fringe?))
                   - insert before, after, insert drop/with without penalty
